--- a/my.html
+++ b/my.html
@@ -63,17 +63,17 @@
         </div>
 
         <section class="grp">
-            <p>HTML</p>
+            <p class="ppp">HTML</p>
             <div class="container">
                 <div class="skills html">90%</div>
             </div>
 
-            <p>CSS</p>
+            <p class="ppp">CSS</p>
             <div class="container">
                 <div class="skills css">80%</div>
             </div>
 
-            <p>JavaScript</p>
+            <p class="ppp">JavaScript</p>
             <div class="container">
                 <div class="skills js">80%</div>
             </div>
@@ -99,12 +99,12 @@
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="atrinandan804@gmail.com">atrinandan804@gmail.com</a></p>
-        <p>LinkedIn: <a
+        <h2 class="col">Contact</h2>
+        <p class="col">Email: <a class="col" href="atrinandan804@gmail.com">atrinandan804@gmail.com</a></p>
+        <p class="col">LinkedIn: <a class="col"
                 href="https://www.linkedin.com/in/atrinandan-j-080476260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Your
                 LinkedIn Profile</a></p>
-        <p>GitHub: <a href="https://github.com/atrijade">https://github.com/atrijade</a></p>
+        <p class="col">GitHub: <a class="col" href="https://github.com/atrijade">https://github.com/atrijade</a></p>
     </section>
 
     <footer>
