--- a/my.html
+++ b/my.html
@@ -23,8 +23,8 @@
             <a href="#contact">Contact</a>
         </div>
         <div class="d-grid gap-2 d-md-block">
-            <button class="btn btn-primary" id="login" type="button">LogIn</button>
-            <button class="btn btn-primary" id="sign" type="button">SignIn</button>
+            <button class="btn btn-primary" onclick="window.location.href='login.html'" id="login" type="button">LogIn</button>
+            <button class="btn btn-primary" onclick="window.location.href='login.html'" id="login" id="sign" type="button">SignIn</button>
           </div>
     </div>
 
@@ -129,6 +129,74 @@
       strings: ['Front-End Web developer', 'Information-Science Engineer'],
       typeSpeed: 50,
     });
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
+      import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged, } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+    apiKey: "AIzaSyB5zqBKjl9Iajj0NQTdED_JYAvlyF3_nzQ",
+    authDomain: "myportfolio-2d3a7.firebaseapp.com",
+    projectId: "myportfolio-2d3a7",
+    storageBucket: "myportfolio-2d3a7.appspot.com",
+    messagingSenderId: "888435530072",
+    appId: "1:888435530072:web:8780a7ffe9a73003eb2d2d",
+    measurementId: "G-99WTCV2RJD"
+  };
+
+  // Initialize Firebase
+  ocument.getElementById("register").addEventListener("click", function () {
+         var username = document.getElementById('username').value;
+         var email = document.getElementById("email").value;
+         var password = document.getElementById("password").value;
+         //For new registration
+         createUserWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+               // Signed in 
+               const user = userCredential.user;
+               console.log(user);
+               alert("Registration successfully!!");
+               // ...
+            })
+            .catch((error) => {
+               const errorCode = error.code;
+               const errorMessage = error.message;
+               // ..
+               console.log(errorMessage);
+               alert(error);
+            });
+      });
+      //----- End
+
+      //----- Login code start	  
+      document.getElementById("logini").addEventListener("click", function () {
+         var email = document.getElementById("login_email").value;
+         var password = document.getElementById("login_password").value;
+
+         signInWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+               // Signed in 
+               const user = userCredential.user;
+               console.log(user);
+               alert(user.email + " Login successfully!!!");
+               //   document.getElementById('logout').style.display = 'block';
+               window.location.href = "index.html";
+               //document.getElementById('loginForm').style.display = 'none';
+               document.getElementById('myButton1').style.display = 'none';
+               document.getElementById('myButton2').style.display = 'none';
+            })
+            .catch((error) => {
+               const errorCode = error.code;
+               const errorMessage = error.message;
+               console.log(errorMessage);
+               alert(errorMessage);
+            });
+
+
+      });
   </script>
 </body>
 
