--- a/my.html
+++ b/my.html
@@ -6,27 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="my.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
 
+    <!DOCTYPE html>
+    <html lang="en">
 
-    <div class="navbar">
-        <a href="#" class="name">
-            Atrinandan J
-        </a>
-        <div class="menu">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Responsive Navbar with Sidebar</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+    <body>
+        <div class="navbar">
+            
+            <a href="#" class="name">Atrinandan J</a>
+            <div class="menu">
+                <a href="#home" class="si">Home</a>
+                <a href="#about" class="si">About</a>
+                <a href="#projects" class="si">My Skills</a>
+                <a href="#contact" class="si">Contact</a>
+            </div>
+            <div class="d-grid gap-2 d-md-block">
+                <button class="btn btn-primary" onclick="window.location.href='login.html'" id="login"
+                    type="button" class="si">LogIn</button>
+                <button class="btn btn-primary" onclick="window.location.href='login.html'" id="sign"
+                    type="button" >SignIn</button>
+            </div>
+            <span class="menu-icon" onclick="toggleSidebar()">☰</span>
+        </div>
+
+        <div id="sidebar" class="sidebar">
+            <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">×</a>
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#projects">My Skills</a>
             <a href="#contact">Contact</a>
+            <button class="btn btn-primary" onclick="window.location.href='login.html'" id="logini" type="button">LogIn</button>
+            <button class="btn btn-primary" onclick="window.location.href='login.html'" id="signi" type="button">SignIn</button>
         </div>
-        <div class="d-grid gap-2 d-md-block">
-            <button class="btn btn-primary" onclick="window.location.href='login.html'" id="login" type="button">LogIn</button>
-            <button class="btn btn-primary" onclick="window.location.href='login.html'" id="login" id="sign" type="button">SignIn</button>
-          </div>
-    </div>
+
+        <script src="script.js"></script>
+    </body>
+
+    </html>
+
 
     <section id="about">
         <div class="all">
@@ -38,8 +67,9 @@
             <div class="other">
 
                 <h1 class="abouti">About Me</h1>
-                <h2 class="abouti">Student at University of Visvesvaraya College of Engineering<br> I am a <span class="abouti" id="element"></span> </h2>
-                <!-- <span class="abouti" id="element"></span> -->
+                <h2 class="abouti">Student at University of Visvesvaraya College of Engineering<br> I am a <span
+                        id="element"></span> </h2>
+                <span class="abouti" id="element"></span>
             </div>
         </div>
     </section>
@@ -92,19 +122,19 @@
             <div class="project" class="card" style="width: 18rem;">
                 <img class="logoimg" src="Sarvam-Logo@4x.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Sarvam</h5>
-                  <p class="card-text">It was an effort to create a formers community using an user interface</p>
-                  <a href="https://github.com/Sarvam-aaaa/Sarvam" class="btn btn-primary">GitHub Repo</a>
+                    <h5 class="card-title">Sarvam</h5>
+                    <p class="card-text">It was an effort to create a formers community using an user interface</p>
+                    <a href="https://github.com/Sarvam-aaaa/Sarvam" class="btn btn-primary">GitHub Repo</a>
                 </div>
-              </div>
-              <div class="project" class="card" style="width: 18rem;">
+            </div>
+            <div class="project" class="card" style="width: 18rem;">
                 <img class="logoimg" src="js_logo.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Local storage</h5>
-                  <p class="card-text">Small project on the local storage using JS local storage of web-browser</p>
-                  <a href="https://github.com/atrijade/localstorage_js" class="btn btn-primary">GitHub Repo</a>
+                    <h5 class="card-title">Local storage</h5>
+                    <p class="card-text">Small project on the local storage using JS local storage of web-browser</p>
+                    <a href="https://github.com/atrijade/localstorage_js" class="btn btn-primary">GitHub Repo</a>
                 </div>
-              </div>
+            </div>
         </div>
 
     </section>
@@ -123,81 +153,26 @@
     </footer>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
-  <!-- Setup and start animation! -->
-  <script>
-    var typed = new Typed('#element', {
-      strings: ['Front-End Web developer', 'Information-Science Engineer'],
-      typeSpeed: 50,
-    });
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
-      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
-      import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged, } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
+    <!-- Setup and start animation! -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+        var typed = new Typed('#element', {
+            strings: ['Engineer', 'Front-End developer'],
+            typeSpeed: 50,
+        });
+        document.querySelector('.navbar::after').addEventListener('click', function () {
+            document.querySelector('.navbar').classList.toggle('open');
+        });
+        function toggleSidebar() {
+            var sidebar = document.getElementById("sidebar");
+            if (sidebar.style.width === "0px" || sidebar.style.width === "") {
+                sidebar.style.width = "250px";
+            } else {
+                sidebar.style.width = "0px";
+            }
+        }
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-    apiKey: "AIzaSyB5zqBKjl9Iajj0NQTdED_JYAvlyF3_nzQ",
-    authDomain: "myportfolio-2d3a7.firebaseapp.com",
-    projectId: "myportfolio-2d3a7",
-    storageBucket: "myportfolio-2d3a7.appspot.com",
-    messagingSenderId: "888435530072",
-    appId: "1:888435530072:web:8780a7ffe9a73003eb2d2d",
-    measurementId: "G-99WTCV2RJD"
-  };
-
-  // Initialize Firebase
-  ocument.getElementById("register").addEventListener("click", function () {
-         var username = document.getElementById('username').value;
-         var email = document.getElementById("email").value;
-         var password = document.getElementById("password").value;
-         //For new registration
-         createUserWithEmailAndPassword(auth, email, password)
-            .then((userCredential) => {
-               // Signed in 
-               const user = userCredential.user;
-               console.log(user);
-               alert("Registration successfully!!");
-               // ...
-            })
-            .catch((error) => {
-               const errorCode = error.code;
-               const errorMessage = error.message;
-               // ..
-               console.log(errorMessage);
-               alert(error);
-            });
-      });
-      //----- End
-
-      //----- Login code start	  
-      document.getElementById("logini").addEventListener("click", function () {
-         var email = document.getElementById("login_email").value;
-         var password = document.getElementById("login_password").value;
-
-         signInWithEmailAndPassword(auth, email, password)
-            .then((userCredential) => {
-               // Signed in 
-               const user = userCredential.user;
-               console.log(user);
-               alert(user.email + " Login successfully!!!");
-               //   document.getElementById('logout').style.display = 'block';
-               window.location.href = "index.html";
-               //document.getElementById('loginForm').style.display = 'none';
-               document.getElementById('myButton1').style.display = 'none';
-               document.getElementById('myButton2').style.display = 'none';
-            })
-            .catch((error) => {
-               const errorCode = error.code;
-               const errorMessage = error.message;
-               console.log(errorMessage);
-               alert(errorMessage);
-            });
-
-
-      });
-  </script>
+    </script>
 </body>
 
 </html>
